--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,10 +48,19 @@ services:
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - staticfiles:/usr/src/app/staticfiles
+      - ./html:/usr/share/nginx/html
+      - ./certbot/www/:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/nginx/ssl/:ro
+
     ports:
       - ${NGINX_PORT}:${NGINX_PORT}
     depends_on:
       - backend
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
 
 volumes:
   staticfiles:
