--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,12 +48,13 @@ services:
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - staticfiles:/usr/src/app/staticfiles
-      - ./html:/usr/share/nginx/html
       - ./certbot/www/:/var/www/certbot/:ro
       - ./certbot/conf/:/etc/nginx/ssl/:ro
+      - ./nginx/logs/:/var/logs:rw
 
     ports:
       - ${NGINX_PORT}:${NGINX_PORT}
+      - 443:443
     depends_on:
       - backend
   certbot:
