--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ djangorestframework-stubs = "^3.14.5"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tools.pyright]
-include= ["./backend"]
-exclude= [ "**/node_modules", "**/__pycache__"  ]
-
+[tool.pyright]
+include = ["./backend"]
+exclude = ["**/node_modules", "**/__pycache__"]
